# ScientificComputingWCpp

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Dependencies.lua  Makefile  README.md  ScientificComputing  ScientificComputing.cpp  ScientificComputing.h  cmake_install.cmake  install_manifest.txt  premake5.lua
include/: chapter1.h  chapter2.h  chapter4.h  chapter5.h  couts.h  example_functions.h  files.h  inplace_matric_functions.h  matrices.h  matrix_operations.h  norms.h  runge_kutta.h  single_variable_non_linear_solvers.h  vector_operations.h  vector_spaces.h
libs/: premake5.lua
py/: graphical_analysis.py
scientific_computing/: ComplexNumber.cpp  ComplexNumber.hpp  SquareMatrix.cpp  SquareMatrix.h  chapter1.cpp  chapter1.h  chapter2.cpp  chapter2.h  chapter4.cpp  chapter4.h  chapter5.cpp  chapter5.h  example_functions.cpp  example_functions.h
src/: chapter1.cpp  chapter2.cpp  chapter4.cpp  chapter5.cpp  couts.cpp  couts1.h  couts2.h  example_functions.cpp  exercises1.h  exercises2.h  files.cpp  hello.cpp  matrices.cpp  matrix_operations.cpp  norms.cpp  single_variable_non_linear_solvers.cpp  vector_operations.cpp  vector_space_operations.cpp  vector_spaces.cpp
